# vk_tetris

./: .envrc  Cargo.toml  shaders.sh  shell.nix  todo.txt
.direnv/: nix-profile-.5919.32e940c7c420  nix-profile-.5919.32e940c7c420.rc  nix-profile-.6910.bcb68885668c  nix-profile-.6910.bcb68885668c.rc  nix-profile-.712909.1dab772dd4a6  nix-profile-.712909.1dab772dd4a6.rc  nix-profile-.713159.9c6b49aeac36  nix-profile-.713159.9c6b49aeac36.rc  nix-profile-.713184.e24b4c09e963.rc  nix-profile-.713387.107d5ef05c0b.rc  nix-profile-.713719.4e96537f163f.rc  nix-profile-.713895.666e1b3f09c2  nix-profile-.713895.666e1b3f09c2.rc  nix-profile-.714486.0b73e36b1962  nix-profile-.714486.0b73e36b1962.rc  nix-profile-.714876.5d7db4668d7a  nix-profile-.714876.5d7db4668d7a.rc
.git_old/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git_old/hooks/: applypatch-msg.sample  commit-msg.sample  fsmonitor-watchman.sample  post-update.sample  pre-applypatch.sample  pre-commit.sample  pre-merge-commit.sample  pre-push.sample  pre-rebase.sample  pre-receive.sample  prepare-commit-msg.sample  push-to-checkout.sample  sendemail-validate.sample  update.sample
.git_old/logs/: HEAD
.git_old/refs/: stash
conf/: device.json  instance.json
examples/sprite/: main.rs
examples/window/: main.rs
shaders/: backdrop.frag  backdrop.vert  button.frag  button.vert  tetromino.frag  tetromino.vert  text.frag  text.vert  triangle.frag  triangle.vert
src/: lib.rs  main.rs  renderer.rs  types.rs  window.rs
src/game/: board.rs  game.rs  mod.rs  tetromino.rs  text.rs  text_manager.rs  (+2 more)
(+52 files in other folders)
